--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,12 +4,13 @@
     <meta charset="utf-8" />
     <meta
   name="viewport"
-  content="minimum-scale=0.5, initial-scale=1, width=device-width, shrink-to-fit=yes"/>
+  content="minimum-scale=0.5, initial-scale=1, width=device-width, shrink-to-fit=yes, user-scalable=no"/>
     <meta name="theme-color" content="#000000" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css?family=Overpass:600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
@@ -24,7 +25,7 @@
     -->
     <title>明日方舟刷素材推荐一图流</title>
   </head>
-  <body>
+  <body onselectstart="return false" oncontextmenu="return false">
     <div id="root"></div>
     <!--
       This HTML file is a template.
