add grayscale filter (Send greetings to our healers)

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -37,5 +37,15 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <style> 
+      html { 
+          -webkit-filter: grayscale(60%); 
+          -moz-filter: grayscale(60%); 
+          -ms-filter: grayscale(60%); 
+          -o-filter: grayscale(60%); 
+          filter:progid:DXImageTransform.Microsoft.BasicImage(grayscale=0.6);  
+          _filter:none; 
+      } 
+  </style>
   </body>
 </html>
