fix(localization) missed translations

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>明日方舟刷素材推荐一图流</title>
+    <title>ArkOneGraph</title>
   </head>
   <body onselectstart="return false" oncontextmenu="return false">
     <div id="root"></div>
