--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,6 +2,7 @@
 <html lang="zh-cn">
   <head>
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
   name="viewport"
   content="minimum-scale=0.5, initial-scale=1, width=device-width, shrink-to-fit=yes, user-scalable=no"/>
